app/assets/main.css
/* ... */
ul[role='list'],
ol[role='list'] {
  list-style: none;
  padding-inline-start: 0;
  margin-block: 0;
}

ul > li::marker {
  color: inherit;
}

ol > li::marker {
  color: var(--color-accent);
}

code {
  background-color: var(--color-grey-bg);
  padding: 0.1rem 0.2rem;
  border-radius: var(--radius-sm);
  overflow-wrap: anywhere;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}

pre {
  overflow: auto;
  white-space: pre-wrap;
  word-break: break-all;
}

pre code {
  display: inline-block;
  padding: 0.75rem 1rem;
}

kbd {
  font-family: system-ui;
  background-color: var(--color-white);
  border-radius: var(--radius-sm);
  padding-inline: 0.5rem;
  padding-block: 0.35rem;
  border: 1px solid var(--color-grey-bg);
}

abbr {
  text-decoration: none;

  &:hover {
    text-decoration: dotted underline;
    text-underline-offset: 0.35rem;
  }
}

hr {
  border: 0;
  width: 100%;
  height: 1px;
  background-color: var(--color-grey-bg);
  margin-block: 0;
}

table {
  border-collapse: collapse;
  text-align: left;
  font-variant-numeric: tabular-nums;

  thead th {
    font-weight: 600;
    color: var(--color-grey-text);
  }

  tbody th {
    font-weight: 500;
  }

  th,
  td {
    padding: 0.5rem;
  }

  thead tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 0 0 1px 0;
  }

  tbody tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 1px 0;
  }
}

.table-cell {
  vertical-align: middle;
  display: inline-flex;
  align-items: center;
  gap: 0.5rem;
}

button {
  font: inherit;
  color: inherit;
  font-weight: 600;

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

:disabled {
  cursor: default;
}

.button-group {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;

  > .button {
    flex-grow: 1;
  }
}

.label,
label {
  font-weight: 500;
  -webkit-user-select: none;
  user-select: none;

  &.disabled {
    opacity: 25%;
  }
}

.user-select-none {
  -webkit-user-select: none;
  user-select: none;
}

address {
  font-style: normal;
}

fieldset {
  border: none;
  padding: 0;
  margin-inline: 0;
}

legend {
  padding: 0;
  font-weight: 600;
}

textarea {
  padding: 0.5rem;
  resize: vertical;
}

input {
  background-color: transparent;
}

.file-input-wrapper,
.form-field-wrapper,
.markdown-editor {
  label,
  .label {
    display: inline-flex;
    gap: 0.35rem;
    min-height: 1.25rem;
    align-items: center;
    font-size: var(--font-size-xs);
    margin-block-end: 0.25rem;
  }
}

.file-input-wrapper,
.form-field-wrapper {
  position: relative;
  display: inline-grid;
  align-items: center;
  align-content: start;

  [class*='instruction'] {
    margin-top: 0.5rem;
    font-size: var(--font-size-xs);
    color: var(--color-grey-text);
  }

  &:has(:disabled) {
    opacity: 35%;
  }

  .select,
  .input,
  .textarea {
    font-family: system-ui, sans-serif;
    font-size: 16px;
    width: 100%;
    border: 1px solid var(--color-grey-graphic);
    border-radius: var(--radius-sm);

    &::placeholder {
      color: var(--color-grey-graphic);
    }
  }

  .select {
    &:focus-visible {
      outline: 1px solid var(--focus-color);
      border-color: var(--focus-color);
    }
  }

  .input,
  .textarea {
    &:focus {
      outline: 1px solid var(--focus-color);
      border-color: var(--focus-color);
    }
  }
}

.error-wrapper {
  .error {
    display: none;
    align-items: center;
    gap: 0.25rem;
    color: var(--color-red);
    font-size: var(--font-size-xxs);
    padding-block-start: 0.25rem;
  }
}

.show-invalid {
  .form-field-wrapper:has(:invalid) {
    .select,
    .textarea,
    .input {
      border-color: var(--color-red);
    }

    .error-wrapper .error {
      display: flex;
    }
  }
}

.visuallyhidden {
  position: absolute;
  z-index: -1;
  width: 0;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

/* Tippy classes for Popover and Tooltip components */
.tippy-box[data-theme~='krafters'] {
  border-radius: var(--radius-md);
  box-shadow: var(--shadow-3);
  color: var(--color-text);
  background-color: var(--color-card-bg);
  border: 1px solid var(--color-popover-border);
}

[data-theme~='krafters'] .tippy-content {
  font-size: var(--font-size-sm);
  border-radius: var(--radius-md);
  padding: 0;
}

.tippy-box[data-theme~='krafters'][data-placement^='top']
  > .tippy-arrow::before {
  border-block-start-color: var(--color-card-bg);
}

.tippy-box[data-theme~='krafters'][data-placement^='bottom']
  > .tippy-arrow:before {
  border-block-end-color: var(--color-card-bg);
}

.tippy-box[data-theme~='krafters'][data-placement^='left']
  > .tippy-arrow::before {
  border-inline-start-color: var(--color-card-bg);
}

.tippy-box[data-theme~='krafters'][data-placement^='right']
  > .tippy-arrow::before {
  border-inline-end-color: var(--color-card-bg);
}

.tippy-box[data-theme~='krafters'] > .tippy-backdrop {
  background-color: var(--color-card-bg);
}

.tippy-box[data-theme~='krafters'] > .tippy-svg-arrow {
  fill: var(--color-card-bg);
}

/* Markdown Editor/Preview classes */
.md-editor-preview {
  font-size: var(--font-size) !important;
  word-break: break-word !important;

  p {
    white-space: normal;
  }

  ol {
    list-style-position: outside !important;
    padding-inline-start: 2rem !important;
  }

  ul {
    list-style-position: outside !important;
    padding-inline-start: 1.25rem !important;
  }
}

.default-theme {
  ol,
  ul {
    margin: 0 !important;
    > li {
      margin: 0 !important;

      > ul,
      > ol {
        margin-block-end: 0.5rem !important;
      }
    }
  }
}
.md-editor-toolbar-wrapper .md-editor-toolbar-item {
  cursor: default !important;
}

.md-editor-toolbar-item svg.md-editor-icon {
  width: 1.5rem;
  height: 1.5rem;
}
/* ... */

